--- a/gnome-shell/src/gnome-shell-sass/widgets/_app-grid.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_app-grid.scss
@@ -8,6 +8,10 @@ $app_icon_size: 96px;
   column-spacing: $base_spacing * 6;
   max-row-spacing: $base_spacing * 12;
   max-column-spacing: $base_spacing * 12;
+  page-padding-top: $base_padding * 6;
+  page-padding-bottom: $base_padding * 6;
+  page-padding-left: $base_padding * 6;
+  page-padding-right: $base_padding * 6;
 }
 
 /* App Icons */
@@ -71,6 +75,10 @@ $app_grid_fg_color: #fff;
   & .icon-grid {
     row-spacing: $base_spacing * 2;
     column-spacing: $base_spacing * 5;
+    page-padding-top: 0;
+    page-padding-bottom: 0;
+    page-padding-left: 0;
+    page-padding-right: 0;
   }
 
   & .page-indicators {
