--- a/gnome-shell/src/gnome-shell-sass/widgets/_calendar.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_calendar.scss
@@ -1,11 +1,11 @@
 /* Date/Time Menu */
 
 .clock-display-box {
-  spacing: $base_spacing / 2;
+  spacing: 2px;
 
   .clock {
-    padding-left: $base_padding;
-    padding-right: $base_padding;
+    padding-left: $base_padding * 2;
+    padding-right: $base_padding * 2;
   }
 }
 
@@ -94,14 +94,13 @@
     height: $calendar_day_size;
     padding: 0;
     margin: 2px;
-    border-radius: 2px; //$calendar_day_size * 0.5 + 2px;
+    border-radius: $base_border_radius;
     border: 1px solid transparent; //avoid jumparound due to today
     font-feature-settings: "tnum";
     &:hover, &:focus { background-color: $hover_bg_color; }
     &:active,&:selected {
       color: lighten($fg_color,10%);
       background-color: darken($bg_color,5%);
-      box-shadow: inset 0 1px transparentize(white, 0.9);
     }
 
     // day of week heading
