--- a/gnome-shell/src/gnome-shell-sass/widgets/_misc.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_misc.scss
@@ -9,7 +9,7 @@
   background-size: contain;
   color: $osd_fg_color;
   border-radius: 99px;
-  border: 2px $osd_fg_color;
+  icon-size: $base_icon_size * 4; // 64px
   &:hover {
     color: lighten($osd_fg_color,30%);
   }
@@ -17,6 +17,12 @@
   & StIcon {
     background-color: transparentize($osd_fg_color,0.95);
     border-radius: 99px;
+    padding: $base_padding * 2 ; // 12px
+    width: $base_icon_size * 2.5; height:  $base_icon_size * 2.5; // 40px;
+  }
+
+  &.user-avatar {
+    border: 2px $osd_fg_color;
   }
 }
 
@@ -28,15 +34,6 @@
     padding-top: $base_padding * 3; // 18 px
     padding-bottom: $base_padding * 3 + 4px; // 22px
     width: $base_icon_size * 5.5; height:  $base_icon_size * 5.5; // 88px;
-  }
-}
-
-.user-widget.horizontal .user-icon {
-  icon-size: $base_icon_size * 4; // 64px
-
-  & StIcon {
-    padding: $base_padding * 2 ; // 12px
-    width: $base_icon_size * 2.5; height:  $base_icon_size * 2.5; // 40px;
   }
 }
 
@@ -53,4 +50,10 @@
   padding-bottom: 8px;
   @include fontsize($base_font_size - 1);
   color: $warning_color;
+}
+
+/* Workspace animation */
+
+.workspace-animation {
+  background-color: $system_bg_color;
 }
