--- a/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
@@ -7,10 +7,12 @@ $search_entry_height: 36px;
 .search-entry {
   width: $search_entry_width;
   padding: $base_padding+1 $base_padding+3;
-  border-radius: $search_entry_height * 0.5; // half the height
+  border-radius: $base_border_radius; //$search_entry_height * 0.5; // half the height
   color: transparentize($fg_color,0.3);
-  background-color: transparentize(white, 0.8); //$base_color;
-  border-color: transparent; //$borders_color;
+  background-color: transparentize(white, 0.8);
+  border-color: transparent;
+  margin-top: $base_spacing * 2;
+  margin-bottom: $base_spacing;
   box-shadow: inset 0 1px transparentize(white, 0.9);
 
   &:hover {
