--- a/gtk/src/Amber/gtk-4.0/gtk.css
+++ b/gtk/src/Amber/gtk-4.0/gtk.css
@@ -8,7 +8,7 @@ dnd { color: #3C3C3C; }
 
 .large-icons { -gtk-icon-size: 32px; }
 
-spinner:disabled, arrow:disabled, scrollbar:disabled, check:disabled, radio:disabled, treeview.expander:disabled { -gtk-icon-filter: opacity(0.5); }
+image:disabled { -gtk-icon-filter: opacity(0.5); }
 
 .view, iconview, textview > text { color: black; background-color: #ffffff; }
 
@@ -189,9 +189,9 @@ notebook > header > tabs > arrow:focus:focus-visible, button:focus:focus-visible
 
 notebook > header > tabs > arrow:hover, button:hover { color: #3C3C3C; border-color: transparent; background-color: white; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.35), 0 2px 3px rgba(0, 0, 0, 0.25); -gtk-icon-filter: brightness(1.2); }
 
-notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked, button:active, button:checked { color: #3C3C3C; border-color: #9b9b95; background-color: #cfcfcc; text-shadow: none; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); transition-duration: 50ms; }
+notebook > header > tabs > arrow.keyboard-activating, notebook > header > tabs > arrow:active, notebook > header > tabs > arrow:checked, button.keyboard-activating, button:active, button:checked { color: #3C3C3C; border-color: #9b9b95; background-color: #cfcfcc; text-shadow: none; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); transition-duration: 50ms; }
 
-notebook > header > tabs > arrow:active:hover, notebook > header > tabs > arrow:checked:hover, button:active:hover, button:checked:hover { background-color: #c5c5c2; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); }
+notebook > header > tabs > arrow.keyboard-activating:hover, notebook > header > tabs > arrow:active:hover, notebook > header > tabs > arrow:checked:hover, button.keyboard-activating:hover, button:active:hover, button:checked:hover { background-color: #c5c5c2; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); }
 
 notebook > header > tabs > arrow:checked:hover, button:checked:hover { color: #3C3C3C; border-color: #9b9b95; background-color: #cfcfcc; text-shadow: none; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); }
 
@@ -201,7 +201,9 @@ notebook > header > tabs > arrow:checked:active, button:checked:active { color: 
 
 notebook > header > tabs > arrow:checked:active:hover, button:checked:active:hover { background-color: #c5c5c2; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); }
 
-notebook > header > tabs > arrow:backdrop, button.flat:backdrop, button:backdrop { color: #8d8d8c; text-shadow: none; transition: none; -gtk-icon-filter: none; }
+notebook > header > tabs > arrow:backdrop, button.flat:backdrop, button:backdrop { color: #8d8d8c; text-shadow: none; transition: none; }
+
+notebook > header > tabs > arrow:backdrop:not(:disabled), button.flat:backdrop:not(:disabled), button:backdrop:not(:disabled) { -gtk-icon-filter: none; }
 
 notebook > header > tabs > arrow:backdrop:active, notebook > header > tabs > arrow:backdrop:checked, button.flat:backdrop:active, button.flat:backdrop:checked, button:backdrop:active, button:backdrop:checked { color: #8d8d8c; }
 
@@ -209,7 +211,7 @@ notebook > header > tabs > arrow:backdrop:disabled, button.flat:backdrop:disable
 
 notebook > header > tabs > arrow:backdrop:disabled:active, notebook > header > tabs > arrow:backdrop:disabled:checked, button.flat:backdrop:disabled:active, button.flat:backdrop:disabled:checked, button:backdrop:disabled:active, button:backdrop:disabled:checked { color: #b9b9b5; border-color: #c0c0bd; background-image: image(#d3d3d1); box-shadow: none; }
 
-notebook > header > tabs > arrow:disabled, button:disabled { color: #8d8d8c; border-color: #c0c0bd; background-image: image(rgba(227, 227, 225, 0.7)); }
+notebook > header > tabs > arrow:disabled, button:disabled { color: #8d8d8c; border-color: #c0c0bd; background-image: image(rgba(227, 227, 225, 0.7)); -gtk-icon-filter: opacity(0.5); }
 
 notebook > header > tabs > arrow:disabled:active, notebook > header > tabs > arrow:disabled:checked, button:disabled:active, button:disabled:checked { color: #8d8d8c; border-color: #c0c0bd; background-image: image(#d3d3d1); box-shadow: none; }
 
@@ -217,7 +219,7 @@ button.sidebar-button, notebook > header > tabs > arrow, notebook > header > tab
 
 button.sidebar-button:hover, notebook > header > tabs > arrow:hover, button.flat:hover { border-color: transparent; background-image: none; box-shadow: none; background-color: #c0c0bd; transition: all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94); transition-duration: 500ms; }
 
-button.sidebar-button:active, notebook > header > tabs > arrow:active, button.sidebar-button:checked, notebook > header > tabs > arrow:checked, button.flat:active, button.flat:checked { border-color: transparent; background-image: none; box-shadow: none; background-color: #b1b1ad; transition: all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+button.keyboard-activating.sidebar-button, notebook > header > tabs > arrow.keyboard-activating, button.sidebar-button:active, notebook > header > tabs > arrow:active, button.sidebar-button:checked, notebook > header > tabs > arrow:checked, button.flat.keyboard-activating, button.flat:active, button.flat:checked { border-color: transparent; background-image: none; box-shadow: none; background-color: #b1b1ad; transition: all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
 button.sidebar-button:backdrop, notebook > header > tabs > arrow:backdrop, button.sidebar-button:disabled, notebook > header > tabs > arrow:disabled, button.flat:backdrop, button.flat:disabled, button.flat:backdrop:disabled { border-color: transparent; background-color: transparent; background-image: none; box-shadow: none; }
 
@@ -583,8 +585,6 @@ headerbar menubutton > button { margin-top: 0px; margin-bottom: 0px; }
 
 headerbar switch { margin-top: 7px; margin-bottom: 7px; }
 
-headerbar.titlebar headerbar:not(.titlebar) { background: none; box-shadow: none; }
-
 window.csd > .titlebar:not(headerbar) { padding: 0; background-color: transparent; background-image: none; border-style: none; border-color: transparent; box-shadow: none; }
 
 .titlebar:not(headerbar) separator { background-color: #b9b9b5; }
@@ -853,7 +853,7 @@ notebook > header.bottom > tabs > tab { padding-top: 4px; }
 
 notebook > stack:not(:only-child) { background-color: #ffffff; }
 
-scrollbar { background-color: #bebebc; transition: 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+scrollbar { background-color: #bebebc; transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
 scrollbar.top { border-bottom: 1px solid #b9b9b5; }
 
@@ -871,7 +871,7 @@ scrollbar > range > trough > slider:hover:active { background-color: #fa4523; }
 
 scrollbar > range > trough > slider:disabled { background-color: transparent; }
 
-scrollbar > range.fine-tune > trough > slider { min-width: 6px; min-height: 6px; }
+scrollbar > range.fine-tune > trough > slider { transition: none; min-width: 6px; min-height: 6px; }
 
 scrollbar > range.fine-tune.horizontal > trough > slider { border-width: 5px 4px; }
 
@@ -1331,6 +1331,10 @@ stacksidebar list.separators:not(.horizontal) > row:not(.separator) { border-bot
 
 stacksidebar row { padding: 10px 4px; }
 
+stacksidebar row { outline: 0 solid transparent; outline-offset: 4px; }
+
+stacksidebar row:focus:focus-visible { outline-color: rgba(251, 111, 85, 0.5); outline-width: 2px; outline-offset: -2px; }
+
 stacksidebar row > label { padding-left: 6px; padding-right: 6px; }
 
 stacksidebar row.needs-attention > label { background-size: 6px 6px, 0 0; }
@@ -1338,8 +1342,6 @@ stacksidebar row.needs-attention > label { background-size: 6px 6px, 0 0; }
 stacksidebar row:selected { background-color: #fb6f55; border-radius: 0px; color: #ffffff; }
 
 stacksidebar row:selected:hover:dir(ltr), stacksidebar row:selected:hover:dir(rtl) { background-color: #fb6f55; }
-
-stacksidebar row:focus:focus-visible { outline-width: 0; background-color: #fb6f55; color: #ffffff; }
 
 stacksidebar row.activatable:active, stacksidebar row.activatable:selected:active { box-shadow: none; }
 
@@ -1351,15 +1353,15 @@ separator.sidebar { background-color: #b9b9b5; }
 
 .navigation-sidebar > row { min-height: 36px; padding: 0 8px; border-radius: 0; margin: 0; }
 
-.navigation-sidebar > row:hover, .navigation-sidebar > row:backdrop:hover, .navigation-sidebar > row:focus-visible:focus-within { background-color: alpha(currentColor,0.06); }
+.navigation-sidebar > row { outline: 0 solid transparent; outline-offset: 4px; }
+
+.navigation-sidebar > row:focus-visible:focus-within { outline-color: rgba(251, 111, 85, 0.5); outline-width: 2px; outline-offset: -2px; }
+
+.navigation-sidebar > row:hover, .navigation-sidebar > row:backdrop:hover { background-color: alpha(currentColor,0.06); }
 
 .navigation-sidebar > row:selected { color: #ffffff; }
 
 .navigation-sidebar > row:selected, .navigation-sidebar > row:selected:backdrop:hover { background-color: #fb6f55; }
-
-.navigation-sidebar > row:selected:focus-visible:focus-within { outline-width: 0; color: #ffffff; background-color: #fb6f55; }
-
-.navigation-sidebar > row:selected:focus-visible:focus-within:hover { background-color: #fa4523; }
 
 .navigation-sidebar > row:disabled { color: #8d8d8c; }
 
@@ -1515,11 +1517,15 @@ window.csd.popup { border-radius: 0px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2),
 
 window.csd.dialog.message { border-radius: 2px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.13); }
 
-window.csd.solid-csd { margin: 0; padding: 0; border: solid 1px #b9b9b5; border-radius: 0; box-shadow: inset 0 0 0 3px #444240, inset 0 1px rgba(255, 255, 255, 0.04); }
+window.solid-csd { margin: 0; padding: 4px; border: solid 1px #b9b9b5; border-radius: 0; box-shadow: inset 0 0 0 4px #b9b9b5, inset 0 0 0 3px #444240, inset 0 1px rgba(255, 255, 255, 0.04); }
 
-window.csd.solid-csd:backdrop { box-shadow: inset 0 0 0 3px #dededc, inset 0 1px rgba(255, 255, 255, 0.04); }
+window.solid-csd:backdrop { box-shadow: inset 0 0 0 4px #b9b9b5, inset 0 0 0 3px #dededc, inset 0 1px rgba(255, 255, 255, 0.04); }
 
-window.maximized, window.fullscreen, window.tiled, window.tiled-top, window.tiled-left, window.tiled-right, window.tiled-bottom { border-radius: 0; }
+window.maximized, window.fullscreen { border-radius: 0; box-shadow: none; }
+
+window.tiled, window.tiled-top, window.tiled-left, window.tiled-right, window.tiled-bottom { border-radius: 0; box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.18), 0 0 0 20px transparent; }
+
+window:backdrop { box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.18), 0 0 0 20px transparent; }
 
 window.popup { box-shadow: none; }
 
