--- a/gtk/src/Amber/gtk-3.0/gtk-dark.css
+++ b/gtk/src/Amber/gtk-3.0/gtk-dark.css
@@ -2021,6 +2021,8 @@ XfdesktopIconView.view .rubberband { border-radius: 0; }
 
 .caja-notebook .frame { border-width: 0 0 1px; }
 
+.nautilus-window { border-radius: 2px 2px 0 0; }
+
 .nautilus-window searchbar { border-top: 1px solid #393836; }
 
 .nautilus-window .searchbar-container { margin-top: -1px; }
