--- a/gnome-shell/src/gnome-shell-sass/_widgets.scss
+++ b/gnome-shell/src/gnome-shell-sass/_widgets.scss
@@ -49,3 +49,6 @@
 // Lock / login screens
 @import 'widgets/login-dialog';
 @import 'widgets/screen-shield';
+
+// 3rd party extensions
+@import 'widgets/third-party';
