--- a/gtk/src/Amber/gtk-3.0/_custom.scss
+++ b/gtk/src/Amber/gtk-3.0/_custom.scss
@@ -23,6 +23,9 @@
       border-width: 0;
       box-shadow: none;
       transition-property: background-color;
+      > image {
+        opacity: 0;
+      }
     }
 
     &.close {
